--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@
             margin-right: 30px; /* Reduz o espaçamento entre a área de texto e os cards */
             overflow-y: auto; /* Adiciona rolagem se necessário */
             height: 75vh; /* Define a altura da caixa explicativa */
+            text-align: justify; /* Justifica o texto */
         }
         .summary-box h2 {
+            text-align: center; /* Centraliza o título */
             margin-top: 0;
         }
         .card-container {
@@ -212,7 +214,7 @@
         <h1>Escolha a ferramenta necessária</h1>
         <div style="display: flex; width: 100%; flex-wrap: wrap;">
             <div class="summary-box">
-                <h2>Resumo das Ferramentas</h2>
+                <h2>Apresentação das Ferramentas</h2>
                 <p><strong>Audio Alter:</strong> Ferramenta online para alterar e modificar arquivos de áudio. Permite aplicar efeitos sonoros, ajustar o tom, a velocidade e muito mais.</p>
                 <p><strong>Dicionário de Rimas:</strong> Dicionário colaborativo que inclui definições de palavras, rimas e gírias. Útil para escritores, compositores, poetas e qualquer pessoa interessada em ampliar seu vocabulário.</p>
                 <p><strong>Musicca:</strong> Plataforma de ferramentas musicais que ajuda no aprendizado de teoria musical, leitura de partituras e prática de instrumentos.</p>
